--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   },
   "homepage": "https://github.com/sanderblue/ajaxrequest#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.1.2",
     "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.0",
+    "gulp-uglify": "^1.4.2",
     "gulp-umd": "^0.2.0"
   }
 }
