--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ajaxrequest",
   "version": "0.0.3",
   "description": "A minimalist AJAX request module.",
-  "main": "ajaxrequest.js",
+  "main": "dist/ajaxrequest.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
